# opencv-starterkit

./: .env  .gitignore  README.md  build.sh  docker-compose.yaml  package.json
docker/: Dockerfile
src/AlphaBlending/: AlphaBlending.ipynb  CMakeLists.txt  alphaBlend  alphaBlend.py
src/BackgroundSubstraction/: CMakeLists.txt
src/Calibration/: .gitignore  CMakeLists.txt  coco.names  videoRead  videoRead.cpp  videoRead.py
src/Colorization/: Colorization.ipynb
src/Colormap/: colormap.cpp  colormap.py
src/ConvexHull/: ConvexHull.ipynb
src/Delaunay/: CMakeLists.txt  delaunay  delaunay.cpp  delaunay.py
src/DigitsClassification/: CMakeLists.txt  train_digits.cpp
src/FaceAverage/: CMakeLists.txt  faceAverage
src/FaceDetectionComparison/: CMakeLists.txt  dnn_face_recognition_ex.cpp  face_detection_dlib_mmod  face_detection_dlib_mmod.cpp  face_detection_opencv_dnn
src/FaceMorph/: FaceMorph.ipynb  faceMorph.py
src/FaceRecognition/: FaceRecognition.ipynb  face_compare.py  facerec_cam.py
src/FaceSwap/: faceSwap.py
src/GOTURN/: .gitignore  CMakeLists.txt  goturnTracker  goturnTracker.cpp  goturnTracker.py
src/HDR/: CMakeLists.txt  hdr
src/HandPose/: .gitignore
src/HeadPose/: HeadPose.ipynb  headPose.py
src/Heatmap/: .gitignore  Heatmap.ipynb
src/Holes/: CMakeLists.txt  imfill
src/Homography/: CMakeLists.txt  homography.cpp  homography2.cpp  perspective-correction.cpp  virtual-billboard  virtual-billboard.cpp
src/HuMoments/: CMakeLists.txt  HuMoments
src/ImageAlignment/: CMakeLists.txt  image_alignment  image_alignment.cpp  image_alignment_simple_example  image_alignment_simple_example.cpp
src/ImageAlignment-FeatureBased/: CMakeLists.txt  align  align.cpp
src/InstallScripts/: installOpenCV-4-macos.sh
src/Keras-ImageNet-Models/: pretrained-imagenet-models-classification.ipynb
src/Mask-RCNN/: .gitignore  CMakeLists.txt  Mask-RCNN.ipynb  mask_rcnn  mask_rcnn.cpp
src/UI-cvui/: CMakeLists.txt  README.md  build.sh  canny  canny.cpp  cvui.h  hello-world  hello-world.cpp  morph_lines_detection  morph_lines_detection.cpp
src/qt-test/: CMakeLists.txt  Makefile  camviewer.cpp  camviewer.h  main  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_mainwindow.cpp  qt-test.pro  ui_mainwindow.h
src/qt-test/qt-test.app/Contents/: Info.plist
src/qt-test/qt-test.app/Contents/MacOS/: qt-test
(+190 files in other folders)
